# loom

./: .gitignore  LICENSE  README.md  example-config.yaml  pyproject.toml  requirements.txt  review_system.md  run.py  system.md
docs/: COMPACTION.md  CUSTOM_PROMPTS.md  SECURITY.md  USAGE_GUIDE.md
src/: __init__.py  agent.py  config.py  llm.py  main.py  repl.py  session.py  setup.py  utils.py  web_ui.py
src/tools/: __init__.py  base.py  bash_tool.py  bg_tools.py  file_tools.py  git_tools.py  memory.py  safety.py  search_tools.py
src/web/: index.html
tests/: test_agent.py  test_config.py  test_file_tools.py  test_fixes.py  test_launch.py  test_plan_mode.py  test_repair.py  test_safety_guards.py  test_setup.py  test_token_optimizations.py
